# HOPS

./: .gitignore  AGENTS.md  AutoResearch.md  HeteroResearch.md  README.md  main.py  pyproject.toml  status.md
configs/: analytical_example.yaml  default.yaml  dgx_a100.yaml  dgx_h100.yaml  single_node_4gpu.yaml
evaluation/: pipeline_test.py
experiments/: README.md  link_bench.py
experiments/01_h100_baseline_pp2/: hops.yaml  run.slurm
experiments/02_a100_baseline_pp2/: hops.yaml  run.slurm
experiments/03_hetero_even_pp4/: hops.yaml  run.slurm
experiments/04_hetero_weighted_pp4/: hops.yaml  run.slurm
experiments/05_h100_dual_node_pp2/: hops.yaml  run.slurm
experiments/06_h100_single_gpu_smoke/: cluster_p5small_capacity_block_1gpu.yaml  hops.yaml  run.slurm
experiments/experiment_1/: README.md  cluster_g5_g6_odcr_1f.yaml
experiments/experiment_2/: README.md  cluster_g5_g6_p5_6gpu_1f.yaml  submit_sequential.sh
experiments/experiment_3/: README.md  cluster_g5_g6_p5_6gpu_1f.yaml  submit_sequential.sh
experiments/experiment_4/: README.md  cluster_g5_g6_4gpu_template.yaml  compare_schedules.sh  submit_sequential.sh
experiments/hetero_scheduler/: bench_a10g_front.yaml  evaluate.py  (+18 more)
fixtures/: expected_metrics.json  loader.py
tests/: conftest.py  test_config_parser.py  test_distributions.py  test_event_engine.py  test_experiments.py  test_failure.py  test_hetero_schedulers.py  test_integration.py  test_megatron_compare.py  test_new_features.py  test_pipeline.py  test_scheduler.py  test_tools_validation.py  test_topology.py  test_validation_regression.py
(+1379 files in other folders)
